[package]
name = "parser_combinator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.0", features = ["derive"] }
quote = "1.0.23"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "benchmark"
# path = "benches/benchmark.rs"
harness = false
